infra/cluster/cloudformation/cluster-elb.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Sets up ecs cluster elb
Parameters:
  ClusterName:
    Type: String

  DefaultAcmCertificateArn:
    Type: String
  
  HasHTTPS:
    Type: String

Conditions:
  hasSSL: !Equals [!Ref HasHTTPS, "true"]

Resources:
#========== Security Groups
  LoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId:
        'Fn::ImportValue': !Sub ${ClusterName}VPC
      GroupName: !Sub ${ClusterName}AllowWebServer
      GroupDescription: Enables access to all IPs to port 80 and 443
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

#========== Public Application Load Balancer
  PublicAlb:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Sub public-alb-${ClusterName}
      Type: application
      Scheme: internet-facing
      Subnets:
        - 'Fn::ImportValue': !Sub ${ClusterName}PublicSubnet1
        - 'Fn::ImportValue': !Sub ${ClusterName}PublicSubnet2
      SecurityGroups:
        - !Ref LoadBalancerSecurityGroup
        - 'Fn::ImportValue': !Sub ${ClusterName}InternalAccessSecurityGroup

  PublicAlbDefaultTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Sub public-tg-${ClusterName}-default
      VpcId:
        'Fn::ImportValue': !Sub ${ClusterName}VPC
      Port: 80
      Protocol: HTTP
      Matcher:
        HttpCode: '200,301'
      HealthCheckIntervalSeconds: 300
      HealthCheckPath: /healthz
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 120
      HealthyThresholdCount: 2
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: 10
        - Key: stickiness.enabled
          Value: true
        - Key: stickiness.lb_cookie.duration_seconds
          Value: 60

  PublicAlbListenerForHttp:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref PublicAlb
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref PublicAlbDefaultTargetGroup

  PublicAlbListenerForHttps:
    Condition: hasSSL
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref PublicAlb
      Port: 443
      Protocol: HTTPS
      Certificates:
        - CertificateArn: !Ref DefaultAcmCertificateArn
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref PublicAlbDefaultTargetGroup

Outputs:
  LoadBalancerSecurityGroup:
    Value: !Ref LoadBalancerSecurityGroup
    Export:
      Name: !Sub ${ClusterName}LoadBalancerSecurityGroup

  FrontendAlbDefaultTargetGroup:
    Value: !Ref PublicAlbDefaultTargetGroup
    Export:
      Name: !Sub ${ClusterName}FrontendAlbDefaultTargetGroup

  FrontendAlbDns:
    Value: !Sub ${PublicAlb.DNSName}
    Export:
      Name: !Sub ${ClusterName}FrontendAlbDns

  FrontendAlbFullName:
    Value: !Sub ${PublicAlb.LoadBalancerFullName}
    Export:
      Name: !Sub ${ClusterName}FrontendAlbFullName

  FrontendAlbListenerForHttp:
    Value: !Ref PublicAlbListenerForHttp
    Export:
      Name: !Sub ${ClusterName}FrontendAlbListenerForHttp

  FrontendAlbListenerForHttps:
    Condition: hasSSL
    Value: !Ref PublicAlbListenerForHttps
    Export:
      Name: !Sub ${ClusterName}FrontendAlbListenerForHttps

  BackendAlbDefaultTargetGroup:
    Value: !Ref PublicAlbDefaultTargetGroup
    Export:
      Name: !Sub ${ClusterName}BackendAlbDefaultTargetGroup

  BackendAlbDns:
    Value: !GetAtt PublicAlb.DNSName
    Export:
      Name: !Sub ${ClusterName}BackendAlbDns

  BackendAlbFullName:
    Value: !GetAtt PublicAlb.LoadBalancerFullName
    Export:
      Name: !Sub ${ClusterName}BackendAlbFullName

  BackendAlbListenerForHttp:
    Value: !Ref PublicAlbListenerForHttp
    Export:
      Name: !Sub ${ClusterName}BackendAlbListenerForHttp

  BackendAlbListenerForHttps:
    Condition: hasSSL
    Value: !Ref PublicAlbListenerForHttps
    Export:
      Name: !Sub ${ClusterName}BackendAlbListenerForHttps

  PublicAlb:
    Value: !Ref PublicAlb
    Export:
      Name: !Sub ${ClusterName}PublicAlb
